--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
-   <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico|Patua+One" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
 </head>
@@ -40,8 +40,8 @@
     
 	
 	
-	<script src="jquery-3.3.1.min.js"></script>
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+	<!-- <script src="jquery-3.3.1.min.js"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="designs.js"></script>
 	
 	
