--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div id="header">
 			<h1>Pixel Art Maker</h1>
 		</div>
+		<!-- DIV FOR FORM INPUT  STARTS HERE -->
 		<div id="sizeForm">
 			<h2>Choose Grid Size</h2>
 			<form id="sizePicker">
@@ -22,15 +23,17 @@
 				<input type="submit" value="CREATE GRID">
 			</form>
 		</div>
+		<!-- DIV FOR FORM INPUT  ENDSHERE -->
 		
-		
+		<!-- DIV FOR COLOR PICKER STARTS HERE -->
 		<div id="colorSelectors">
-		<label>Pick A Shading Color</label>
-		<input type="color" id="colorPicker">
-		
-		<label>Pick Canvas Background</label>
-		<input type="color" id="tablebg">
+			<label>Pick A Shading Color</label>
+			<input type="color" id="colorPicker">
+			
+			<label>Pick Canvas Background</label>
+			<input type="color" id="tablebg">
 		</div>
+		<!-- DIV FOR COLOR PICKER ENDS HERE -->
 
 		<h2 class="canvasHeading">Design Canvas</h2>
 		<hr>
